<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/tasksFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/list_title"/>

    <item
        android:id="@id/statisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_title"/>

</menu>