<resources>
    <string name="app_name">TodoApp</string>
    <string name="navigation_view_header_title">Todo</string>

    <!-- menu -->
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_all">All Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="label_active">Active Tasks</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="successfully_deleted_task_message">Task wad deleted</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked actice</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_refresh">Refresh</string>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="add_task">New Task</string>
</resources>

