<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewmodel"
            type="com.ininmm.todoapp.ui.task.TasksViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/tasksCoordinatorRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ininmm.todoapp.widget.ScrollChildSwipeRefreshLayout
            android:id="@+id/tasksRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{viewmodel::refresh}"
            app:refreshing="@{viewmodel.dataLoading}">

            <RelativeLayout
                android:id="@+id/tasksContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/tasksLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/taskFilteringLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/list_item_padding"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/list_item_padding"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:gravity="center_vertical"
                        android:text="@{context.getString(viewmodel.currentFilteringLabel)}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tasksList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fadingEdge="vertical"
                        android:requiresFadingEdge="vertical"
                        android:fadingEdgeLength="4dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:items="@{viewmodel.items}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tasksNoTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}">

                    <ImageView
                        android:id="@+id/tasksNoTasksIcon"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center"
                        android:src="@{ContextCompat.getDrawable(context, viewmodel.noTaskIconRes)}" />

                    <TextView
                        android:id="@+id/tasksNoTasksMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/list_item_padding"
                        android:text="@{context.getString(viewmodel.noTasksLabel)}" />
                </LinearLayout>
            </RelativeLayout>
        </com.ininmm.todoapp.widget.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/taskFabAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_anchor="@id/tasksRefreshLayout"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>